<resources>
    <string name="app_name">Nevernote</string>
    <string name="search_hint">Búsqueda por título</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="buscar">Buscar</string>
    <string name="ordenar_por">Ordenar por</string>
    <string name="ordenar_fecha_asc">Fecha ascendente</string>
    <string name="ordenar_fecha_des">Fecha descendente</string>
    <string name="ordenar_modificacion_asc">Modificación (antiguas)</string>
    <string name="ordenar_modificacion_des">Modificación (recientes)</string>
    <string name="ordenar_titulo_asc">Título ascendente</string>
    <string name="ordenar_titulo_des">Título descendente</string>
    <string name="ordenar_recuento_asc">Recuento de notas ascendente</string>
    <string name="ordenar_recuento_des">Recuento de notas descendente</string>
    <string name="salir">Salir</string>
    <string name="pin_titulo">Introduce el PIN</string>
    <string name="desbloquear">Desbloquear</string>
    <string name="pin_incorrecto">PIN incorrecto</string>
    <string name="establecer_pin">Establecer PIN</string>
    <string name="cambiar_pin">Cambiar PIN</string>
    <string name="quitar_pin">Quitar PIN</string>
    <string name="bloquear_ahora">Bloquear ahora</string>
    <string name="pin_nuevo">Nuevo PIN</string>
    <string name="pin_actual">PIN actual</string>
    <string name="pin_guardado">PIN guardado</string>
    <string name="pin_quitado">PIN quitado</string>
    <string name="pin_corto">El PIN debe tener al menos 4 dígitos</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_vacio">El nombre no puede estar vacío</string>
    <string name="progreso_tareas">%1$d de %2$d tareas hechas</string>
    <string name="fijar">Fijar</string>
    <string name="desfijar">Dejar de fijar</string>
    <string name="fijada">Nota fijada</string>
    <string name="color_nota">Color de la nota</string>
    <string name="sin_color">Sin color</string>
    <string name="compartir">Compartir</string>
    <string name="exportar_todo">Exportar todo</string>
    <string name="importar_todo">Importar todo</string>
    <string name="respaldo_exportado">Copia exportada</string>
    <string name="respaldo_importado">Copia importada</string>
    <string name="error_respaldo">No se pudo completar la operación</string>
    <string name="mover_a">Mover a libreta</string>
    <string name="etiquetar">Etiquetar</string>
    <string name="seleccionadas">%1$d seleccionadas</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="vista_lista">Vista de lista</string>
    <string name="vista_cuadricula">Vista de cuadrícula</string>
    <string name="orden_fecha_modificacion">Por fecha de modificación</string>
    <string name="ajustes">Ajustes</string>
    <string name="apariencia">Apariencia</string>
    <string name="tema_sistema">Según el sistema</string>
    <string name="tema_claro">Claro</string>
    <string name="tema_oscuro">Oscuro</string>
    <string name="acerca_de">Acerca de</string>
    <string name="version">Versión %1$s</string>
    <string name="autor">Hecho por Eduardo Díaz Sánchez</string>
    <string name="descripcion_app">Aplicación de notas con libretas, etiquetas, búsqueda, recordatorios y adjuntos.</string>

    <!-- Strings used for nav_header_main.xml -->
    <string name="textViewNav">Nevernote</string>
    <string name="textViewNav2">Larga vida y prosperidad</string>

    <!-- Navegación -->
    <string name="todas_las_notas">Todas las notas</string>
    <string name="libretas">Libretas</string>
    <string name="etiquetas">Etiquetas</string>
    <string name="libretas_con_titulo">Libretas - %1$s</string>
    <string name="etiquetas_con_titulo">Etiquetas - %1$s</string>

    <!-- String used for activity_edit_nota.xml -->
    <string name="editTextHintAs">"Título de la nota"</string>
    <string name="editTextHintAs2">"Contenido"</string>

    <!-- Títulos de pantalla -->
    <string name="nueva_nota">Nueva nota</string>
    <string name="editar_nota">Editar nota</string>
    <string name="libreta">Libreta</string>
    <string name="sin_notas">Todavía no hay notas</string>
    <string name="sin_libretas">Todavía no hay libretas</string>
    <string name="sin_etiquetas">Todavía no hay etiquetas</string>
    <string name="ver_nota">Nota</string>
    <string name="nueva_libreta">Nueva libreta</string>
    <string name="editar_libreta">Editar libreta</string>
    <string name="nueva_etiqueta">Nueva etiqueta</string>
    <string name="editar_etiqueta">Editar etiqueta</string>
    <string name="elige_etiquetas">Elige etiquetas</string>
    <string name="viñetas">Viñetas</string>
    <string name="casilla">Casilla</string>
    <string name="negrita">Negrita</string>
    <string name="cursiva">Cursiva</string>
    <string name="tachado">Tachado</string>
    <string name="lista_numerada">Lista numerada</string>
    <string name="cita">Cita</string>
    <string name="encabezado">Encabezado</string>
    <string name="codigo">Código</string>
    <string name="enlace">Enlace</string>
    <string name="separador">Separador</string>

    <!-- Acciones -->
    <string name="ok">OK</string>
    <string name="cancelar">CANCELAR</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="restaurar">Restaurar</string>
    <string name="eliminar_definitivamente">Eliminar definitivamente</string>
    <string name="deshacer">Deshacer</string>
    <string name="papelera">Papelera</string>
    <string name="guardar">Guardar</string>
    <string name="anadir">Añadir</string>
    <string name="exportar">Exportar</string>
    <string name="importar">Importar</string>
    <string name="adjuntar_imagen">Adjuntar imagen</string>
    <string name="adjunto_imagen">Imagen adjunta</string>
    <string name="quitar_imagen">Quitar imagen</string>
    <string name="adjunto_eliminado">Imagen quitada</string>
    <string name="recordatorio">Recordatorio</string>
    <string name="quitar_recordatorio">Quitar recordatorio</string>
    <string name="recordatorio_fijado">Recordatorio fijado</string>
    <string name="recordatorio_quitado">Recordatorio quitado</string>
    <string name="recordatorio_label">Recordatorio: %1$s</string>
    <string name="recordatorio_aviso">Tienes un recordatorio</string>
    <string name="canal_recordatorios">Recordatorios</string>

    <!-- Alert Dialog -->
    <string name="titleAlertDialog">"Aviso"</string>
    <string name="messageAlertDialog">"¿Seguro que quieres eliminar la nota?"</string>
    <string name="messageAlertDialog2">"¿Seguro que quieres eliminar la libreta?"</string>
    <string name="messageAlertDialog3">"¿Seguro que quieres eliminar la etiqueta?"</string>
    <string name="positiveBtnAlertDialog">"ELIMINAR"</string>
    <string name="negativeBtnAlertDIalog">"CANCELAR"</string>

    <!-- Notas -->
    <string name="nota_sin_titulo">Nota sin título</string>
    <string name="nota_editada">Nota editada</string>
    <string name="nota_eliminada">Nota eliminada</string>
    <string name="nota_restaurada">Nota restaurada</string>
    <string name="nota_en_papelera">Nota enviada a la papelera</string>
    <string name="nota_exportada">Nota exportada</string>
    <string name="nota_importada">Nota importada</string>
    <string name="error_exportar">No se pudo exportar la nota</string>
    <string name="error_importar">No se pudo importar el fichero</string>
    <string name="adjunto_anadido">Imagen adjuntada</string>
    <string name="error_adjunto">No se pudo adjuntar la imagen</string>
    <string name="messageAlertDialogAdjunto">"¿Seguro que quieres eliminar el adjunto?"</string>
    <string name="nota_vacia">No se puede guardar una nota vacía</string>
    <string name="fecha_creacion">Creada: %1$s</string>
    <string name="fecha_modificacion">Modificada: %1$s</string>
    <string name="no_etiquetas_disponibles">No hay ninguna etiqueta disponible</string>
    <string name="no_etiquetas_en_nota">No hay ninguna etiqueta asociada a esta nota</string>

    <!-- Libretas -->
    <string name="libreta_guardada">Libreta guardada</string>
    <string name="libreta_editada">Libreta editada</string>
    <string name="libreta_eliminada">Libreta eliminada</string>
    <string name="libreta_eliminada_movidas">Libreta eliminada, todas las notas han sido movidas a \'Default\'</string>
    <string name="libreta_sin_nombre">No se puede guardar una libreta sin nombre</string>
    <string name="libreta_duplicada">Ya existe una libreta con ese título</string>
    <string name="no_editar_default">No se puede editar la libreta \'Default\'</string>
    <string name="no_eliminar_default">No se puede eliminar la libreta \'Default\'</string>
    <plurals name="notas">
        <item quantity="one">1 Nota</item>
        <item quantity="other">%1$d Notas</item>
    </plurals>

    <!-- Etiquetas -->
    <string name="etiqueta_guardada">Etiqueta guardada</string>
    <string name="etiqueta_editada">Etiqueta editada</string>
    <string name="etiqueta_eliminada">Etiqueta eliminada</string>
    <string name="etiqueta_duplicada">Ya existe una etiqueta con ese título</string>
</resources>
