<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notas.MainActivity">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_buscar"
        android:orderInCategory="100"
        android:title="@string/buscar"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_filtrar"
        android:icon="@drawable/ic_ordenar"
        android:orderInCategory="100"
        android:title="@string/ordenar_por">

        <menu>
            <item
                android:id="@+id/action_filtrar_fecha_asc"
                android:orderInCategory="100"
                android:title="@string/ordenar_fecha_asc" />

            <item
                android:id="@+id/action_filtrar_fecha_des"
                android:orderInCategory="100"
                android:title="@string/ordenar_fecha_des" />

            <item
                android:id="@+id/action_filtrar_titulo_asc"
                android:orderInCategory="100"
                android:title="@string/ordenar_titulo_asc" />

            <item
                android:id="@+id/action_filtrar_titulo_des"
                android:orderInCategory="100"
                android:title="@string/ordenar_titulo_des" />

            <item
                android:id="@+id/action_recuento_notas_asc"
                android:orderInCategory="100"
                android:title="@string/ordenar_recuento_asc" />

            <item
                android:id="@+id/action_recuento_notas_des"
                android:orderInCategory="100"
                android:title="@string/ordenar_recuento_des" />
        </menu>
    </item>

    <item
        android:id="@+id/action_importar"
        android:icon="@drawable/ic_importar"
        android:orderInCategory="101"
        android:title="@string/importar"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_establecer_pin"
        android:icon="@drawable/ic_bloquear"
        android:orderInCategory="102"
        android:title="@string/establecer_pin"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_quitar_pin"
        android:icon="@drawable/ic_bloquear"
        android:orderInCategory="103"
        android:title="@string/quitar_pin"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_bloquear"
        android:icon="@drawable/ic_bloquear"
        android:orderInCategory="105"
        android:title="@string/bloquear_ahora"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_salir"
        android:icon="@drawable/ic_salir"
        android:orderInCategory="106"
        android:title="@string/salir"
        app:showAsAction="never" />

</menu>
