<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.inkpot.app.ViewNotaActivity">

    <item
        android:id="@+id/action_Editar"
        android:icon="@drawable/ic_editar"
        android:orderInCategory="100"
        android:title="@string/editar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_Eliminar"
        android:icon="@drawable/ic_eliminar"
        android:orderInCategory="101"
        android:title="@string/eliminar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_fijar"
        android:icon="@drawable/ic_pin"
        android:orderInCategory="100"
        android:title="@string/fijar"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_compartir"
        android:icon="@drawable/ic_compartir"
        android:orderInCategory="103"
        android:title="@string/compartir"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_recordatorio"
        android:icon="@drawable/ic_recordatorio"
        android:orderInCategory="103"
        android:title="@string/recordatorio"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_quitar_recordatorio"
        android:icon="@drawable/ic_recordatorio"
        android:orderInCategory="104"
        android:title="@string/quitar_recordatorio"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exportar"
        android:icon="@drawable/ic_exportar"
        android:orderInCategory="105"
        android:title="@string/exportar"
        app:showAsAction="never" />
</menu>
