<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/allNotas"
            android:icon="@drawable/ic_notas"
            android:title="@string/todas_las_notas" />

        <item
            android:id="@+id/allLibretas"
            android:icon="@drawable/ic_libretas"
            android:title="@string/libretas" />

        <item
            android:id="@+id/allEtiquetas"
            android:icon="@drawable/ic_etiquetas"
            android:title="@string/etiquetas" />

        <item
            android:id="@+id/allPapelera"
            android:icon="@drawable/ic_papelera"
            android:title="@string/papelera" />
    </group>

    <item
        android:id="@+id/allAjustes"
        android:icon="@drawable/ic_ajustes"
        android:title="@string/ajustes" />

</menu>
