<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notas.EditNotaActivity" >

    <item
        android:id="@+id/action_vinietas"
        android:icon="@drawable/ic_vinietas"
        android:orderInCategory="1"
        android:title="@string/viñetas"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_casilla"
        android:icon="@drawable/ic_casilla"
        android:orderInCategory="2"
        android:title="@string/casilla"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_negrita"
        android:icon="@drawable/ic_negrita"
        android:orderInCategory="3"
        android:title="@string/negrita"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cursiva"
        android:icon="@drawable/ic_cursiva"
        android:orderInCategory="4"
        android:title="@string/cursiva"
        app:showAsAction="ifRoom" />
</menu>
