<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notas.EditNotaActivity" >

    <!--<item
        android:id="@+id/action_vinietas"
        android:orderInCategory="100"
        android:title="Vinietas"
        android:icon="@mipmap/ic_vinietas2_foreground"
        app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/action_guardar"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="101"
        android:title="@string/guardar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_casilla"
        android:orderInCategory="102"
        android:title="@string/casilla"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_negrita"
        android:orderInCategory="103"
        android:title="@string/negrita"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cursiva"
        android:orderInCategory="104"
        android:title="@string/cursiva"
        app:showAsAction="never" />
</menu>