<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ajustes.AjustesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:accessibilityHeading="true"
        android:text="@string/apariencia"
        android:textColor="@color/primary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/grupoTema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/temaSistema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/tema_sistema" />

        <RadioButton
            android:id="@+id/temaClaro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/tema_claro" />

        <RadioButton
            android:id="@+id/temaOscuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/tema_oscuro" />

    </RadioGroup>

    <View
        style="@style/Divider"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:id="@+id/filaAcercaDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_info"
            app:tint="@color/on_surface" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/acerca_de"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
