<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/ic_icon_notas" />

    <TextView
        android:id="@+id/textViewNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:accessibilityHeading="true"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/textViewNav"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewNav2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.85"
        android:text="@string/textViewNav2"
        android:textSize="14sp" />

</LinearLayout>
